# mea-gui

./: .gitignore  .readthedocs.yaml  AnalysisThread.py  CPUMonitorThread.py  ClusterTracker.py  ColorCell.py  Constants.py  CustomViewBox.py  Dockerfile  GraphWidget.py  GridWidget.py  GroupSelectionDialog.py  LegendWidget.py  LoadingDialog.py  MEA_GUI_Installer.iss  MatlabEngineThread.py  Media.py  Process.py  ProgressBar.py  ProgressUpdaterThread.py  README.md  RasterPlot.py  ScatterPlot.py  Settings.py  SignalAnalyzer.py  Spectrogram.py  SzDetectCat.m  Updater.py  VideoEditor.py  create_package.py  get_cat_envelop.m  hdftest.py  loadtest.py  low_ram_cat.m  main.py  peaks.py  pyproject.toml  requirements.txt  save_channel_to_mat.m  setup.py  (+10 more)
.github/workflows/: build-and-release.yml  test.yml
docs/: cheatsheet.rst  conf.py  contribute.rst  index.rst  quickstart.rst  requirements.txt  usage.rst
docs/.netlify/: state.json
docs/sphinx_env/: pyvenv.cfg
docs/userguide/: configuration.rst  installation.rst  userguide.rst
paper/: ref.txt
paper/MEAGUIPaper.enlp/: MEAGUIPaper.enl
resources/: icon.icns
src/: intervals.py  main.py  real.py  segments.py  test_mat.py  wavelet.py
src/helpers/: Constants.py
src/old/: real.py  segments.py  wavelet.py
src/threads/: AnalysisThread.py  DischargeFinderThread.py  MatlabEngineThread.py  ProgressUpdaterThread.py  UpdateThread.py
src/widgets/: ChannelExtract.py  ClusterTracker.py  ColorCell.py  CustomViewBox.py  DischargeStartArea.py  DischargeStartDialog.py  DocumentationViewer.py  GraphWidget.py  GridWidget.py  Media.py  (+11 more)
(+79 files in other folders)
