[tool.poetry]
name = "mea-gui"
version = "0.1.0"
description = ""
authors = ["booka66 <jacobbcahoon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
h5py = "^3.12.1"
numpy = "^2.1.3"
requests = "^2.32.3"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
urllib3 = "^2.2.3"
packaging = "^24.2"
pyqt5 = "^5.15.11"
matlabengine = "24.1.1"
pyqtgraph = "^0.13.7"
pyqtdarktheme = "^2.1.0"
pyqtwebengine = ">=5.15"
matplotlib = "^3.9.2"
pywavelets = "^1.7.0"
opencv-python = "^4.10.0.84"
pybind11 = "^2.13.6"
tqdm = "^4.67.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
